Updated group_vars to use ranged interfaces and fixed uplink_interfaces references to point to shared_utils

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DOWNLINK_IPV4_POOL_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/DOWNLINK_IPV4_POOL_TESTS.yml
@@ -14,14 +14,12 @@ spine:
     - name: downlink-ipv4-pool-spine1
       downlink_pools:
         - downlink_ipv4_pool: 10.0.1.0/24
-          downlink_interfaces: [Ethernet3, Ethernet4]
-        - downlink_ipv4_pool: 10.0.3.0/24
-          downlink_interfaces: [Ethernet5, Ethernet6]
+          downlink_interfaces: [Ethernet3-6]
       id: 1
     - name: downlink-ipv4-pool-spine2
       downlink_pools:
         - downlink_ipv4_pool: 10.0.2.0/24
-          downlink_interfaces: [Ethernet3, Ethernet4]
+          downlink_interfaces: [Ethernet3-4]
         - downlink_ipv4_pool: 10.0.4.0/24
           downlink_interfaces: [Ethernet5, Ethernet6]
       id: 2
