--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/missing-avt-id-cv-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/missing-avt-id-cv-pathfinder.yml
@@ -85,6 +85,8 @@ wan_virtual_topologies:
         drop_unmatched: true
       application_virtual_topologies:
         - application_profile: TEST
+          path_groups:
+            - names: [ INET ]
           # no id
 
 application_classification:
