--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -225,6 +225,8 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-PROD-AVT-POLICY-VOICE
   - name: PROD-AVT-POLICY-VIDEO
     load_balance_policy: LB-PROD-AVT-POLICY-VIDEO
+  - name: PROD-AVT-POLICY-MPLS-ONLY
+    load_balance_policy: LB-PROD-AVT-POLICY-MPLS-ONLY
   - name: PROD-AVT-POLICY-DEFAULT
     load_balance_policy: LB-PROD-AVT-POLICY-DEFAULT
   - name: CUSTOM-VOICE-PROFILE-NAME
@@ -250,6 +252,8 @@ router_adaptive_virtual_topology:
       id: 2
     - name: PROD-AVT-POLICY-VIDEO
       id: 4
+    - name: PROD-AVT-POLICY-MPLS-ONLY
+      id: 5
     - name: PROD-AVT-POLICY-DEFAULT
       id: 1
   - name: IT
@@ -286,6 +290,8 @@ router_adaptive_virtual_topology:
       avt_profile: PROD-AVT-POLICY-VOICE
     - application_profile: VIDEO
       avt_profile: PROD-AVT-POLICY-VIDEO
+    - application_profile: MPLS-ONLY
+      avt_profile: PROD-AVT-POLICY-MPLS-ONLY
     - application_profile: default
       avt_profile: PROD-AVT-POLICY-DEFAULT
   - name: DEFAULT-AVT-POLICY
@@ -341,7 +347,6 @@ router_path_selection:
   load_balance_policies:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: INET
     - name: Equinix
@@ -349,57 +354,61 @@ router_path_selection:
     - name: Satellite
       priority: 2
     - name: AWS
+    - name: LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: INET
     - name: Equinix
+    - name: LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
-    - name: LAN_HA
     - name: INET
     - name: Equinix
       priority: 2
     - name: MPLS
       priority: 4223
+    - name: LAN_HA
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: INET
       priority: 2
+    - name: LAN_HA
     jitter: 42
     lowest_hop_count: true
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: LTE
     - name: INET
       priority: 2
+    - name: LAN_HA
     loss_rate: '42.0'
+  - name: LB-PROD-AVT-POLICY-MPLS-ONLY
+    path_groups:
+    - name: MPLS
+    - name: LAN_HA
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
-    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 2
+    - name: LAN_HA
   - name: LB-CUSTOM-VOICE-PROFILE-NAME
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: INET
       priority: 2
+    - name: LAN_HA
   - name: LB-TRANSIT-AVT-POLICY-DEFAULT
     path_groups:
-    - name: LAN_HA
     - name: INET
     - name: MPLS
       priority: 2
+    - name: LAN_HA
   - name: LB-DEFAULT-POLICY-DEFAULT
     path_groups:
-    - name: LAN_HA
     - name: MPLS
     - name: INET
     - name: Equinix
@@ -407,6 +416,7 @@ router_path_selection:
     - name: Satellite
       priority: 2
     - name: AWS
+    - name: LAN_HA
 router_traffic_engineering:
   enabled: true
 stun:
@@ -427,6 +437,7 @@ application_traffic_recognition:
   - name: VOICE
     applications:
     - name: CUSTOM-VOICE-APPLICATION
+  - name: MPLS-ONLY
   - name: APP-PROFILE-CONTROL-PLANE
     applications:
     - name: APP-CONTROL-PLANE
@@ -589,8 +600,6 @@ metadata:
       - id: 254
         name: DEFAULT-AVT-POLICY-CONTROL-PLANE
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -601,28 +610,30 @@ metadata:
           preference: alternate
         - name: AWS
           preference: preferred
+        - name: LAN_HA
+          preference: preferred
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
+          preference: preferred
+        - name: LAN_HA
           preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
           preference: alternate
         - name: MPLS
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
     - name: PROD
       vni: 42
       avts:
@@ -631,86 +642,91 @@ metadata:
         id: 2
         name: PROD-AVT-POLICY-VOICE
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
       - id: 4
         name: PROD-AVT-POLICY-VIDEO
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: LTE
           preference: preferred
         - name: INET
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
+      - id: 5
+        name: PROD-AVT-POLICY-MPLS-ONLY
+        pathgroups:
+        - name: MPLS
+          preference: preferred
+        - name: LAN_HA
+          preference: preferred
       - id: 1
         name: PROD-AVT-POLICY-DEFAULT
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: INET
           preference: preferred
         - name: MPLS
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
     - name: IT
       vni: 100
       avts:
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
+          preference: preferred
+        - name: LAN_HA
           preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: INET
           preference: preferred
         - name: Equinix
           preference: alternate
         - name: MPLS
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
     - name: TRANSIT
       vni: 66
       avts:
       - id: 42
         name: CUSTOM-VOICE-PROFILE-NAME
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
       - id: 1
         name: TRANSIT-AVT-POLICY-DEFAULT
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: INET
           preference: preferred
         - name: MPLS
           preference: alternate
+        - name: LAN_HA
+          preference: preferred
     - name: ATTRACTED-VRF-FROM-UPLINK
       vni: 166
       avts:
       - id: 1
         name: DEFAULT-POLICY-DEFAULT
         pathgroups:
-        - name: LAN_HA
-          preference: preferred
         - name: MPLS
           preference: preferred
         - name: INET
@@ -720,4 +736,6 @@ metadata:
         - name: Satellite
           preference: alternate
         - name: AWS
+          preference: preferred
+        - name: LAN_HA
           preference: preferred
