Feat(eos_cli_config_gen): Add custom comments at the top of the rendered configuration

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -952,6 +952,9 @@ keys:
             Example: "permit GSHUT 65123:123"
 
             '
+  config_comment:
+    type: str
+    description: Add custom comment to provide configlet information.
   custom_templates:
     type: list
     display_name: Extensibility with Custom Templates
