--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2913,13 +2913,28 @@ keys:
                 under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface`
                 as sFlow source-interface.\n  An error will be raised if inband management
                 is not configured for the device.\n- Any other string will be used
-                directly as the VRF name but source interface must be set with `sflow.structured_config`
-                as needed."
+                directly as the VRF name. Remember to set the `sflow_settings.vrfs[].source_interface`
+                if needed."
               convert_types:
               - int
-      structured_config:
-        type: dict
-        description: Custom structured config added under `sflow` for `eos_cli_config_gen`.
+      vrfs:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              convert_types:
+              - int
+              description: VRF name.
+            source_interface:
+              type: str
+              description: 'Source interface to use for sFlow destinations in this
+                VRF.
+
+                If set for the VRFs defined by `mgmt_interface_vrf` or `inband_mgmt_vrf`,
+                this setting will take precedence.'
   shutdown_interfaces_towards_undeployed_peers:
     documentation_options:
       table: fabric-settings
