--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/sflow_settings.schema.yml
@@ -40,9 +40,22 @@ keys:
                   An error will be raised if `mgmt_ip` or `ipv6_mgmt_ip` are not configured for the device.
                 - `use_inband_mgmt_vrf` will configure the sFlow destination under the VRF set with `inband_mgmt_vrf` and set the `inband_mgmt_interface` as sFlow source-interface.
                   An error will be raised if inband management is not configured for the device.
-                - Any other string will be used directly as the VRF name but source interface must be set with `sflow.structured_config` as needed.
+                - Any other string will be used directly as the VRF name. Remember to set the `sflow_settings.vrfs[].source_interface` if needed.
               convert_types:
                 - int
-      structured_config:
-        type: dict
-        description: Custom structured config added under `sflow` for `eos_cli_config_gen`.
+      vrfs:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              convert_types:
+                - int
+              description: VRF name.
+            source_interface:
+              type: str
+              description: |-
+                Source interface to use for sFlow destinations in this VRF.
+                If set for the VRFs defined by `mgmt_interface_vrf` or `inband_mgmt_vrf`, this setting will take precedence.
