Feat(eos_cli_config_gen): add aaa unresponsive action under global dot1x

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
@@ -20,5 +20,9 @@ dot1x
    mac based authentication hold period 300 seconds
    radius av-pair service-type
    radius av-pair framed-mtu 1500
+aaa unresponsive phone action traffic allow
+aaa unresponsive action apply cached-results timeout 10 hours
+aaa unresponsive eap response success
+aaa unresponsive recovery action reauthenticate
 !
 end
