--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -114,3 +114,11 @@ all:
           hosts:
             duplicate-vlans-mlag-a:
             duplicate-vlans-mlag-b:
+        NO_POOLS_TESTS:
+          hosts:
+            no-pools-spine:
+            no-pools-l3leaf:
+        DUPLICATE_POOLS_TESTS:
+          hosts:
+            duplicate-pools-spine:
+            duplicate-pools-l3leaf:
