--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/inband-mgmt-parent-vrf.cfg
@@ -30,6 +30,7 @@ interface Port-Channel21
    switchport
    switchport trunk allowed vlan 101
    switchport mode trunk
+   port-channel lacp fallback individual
 !
 interface Port-Channel22
    description INBAND-MGMT-SUBNET-VRF_Po1
@@ -37,6 +38,7 @@ interface Port-Channel22
    switchport
    switchport trunk allowed vlan 102
    switchport mode trunk
+   port-channel lacp fallback individual
 !
 interface Port-Channel23
    description INBAND-MGMT-IP_Po1
@@ -48,11 +50,15 @@ interface Port-Channel23
 interface Ethernet21
    description INBAND-MGMT-SUBNET_Ethernet2
    no shutdown
+   switchport access vlan 101
+   switchport mode access
    channel-group 21 mode active
 !
 interface Ethernet22
    description INBAND-MGMT-SUBNET-VRF_Ethernet2
    no shutdown
+   switchport access vlan 102
+   switchport mode access
    channel-group 22 mode active
 !
 interface Ethernet23
