--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-vrf.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/inband-mgmt-parent-vrf.yml
@@ -79,6 +79,8 @@ ethernet_interfaces:
   channel_group:
     id: 21
     mode: active
+  mode: access
+  vlans: 101
 - name: Ethernet22
   peer: inband-mgmt-subnet-vrf
   peer_interface: Ethernet2
@@ -89,6 +91,8 @@ ethernet_interfaces:
   channel_group:
     id: 22
     mode: active
+  mode: access
+  vlans: 102
 - name: Ethernet23
   peer: inband-mgmt-ip
   peer_interface: Ethernet2
@@ -106,12 +110,14 @@ port_channel_interfaces:
   shutdown: false
   mode: trunk
   vlans: '101'
+  lacp_fallback_mode: individual
 - name: Port-Channel22
   description: INBAND-MGMT-SUBNET-VRF_Po1
   type: switched
   shutdown: false
   mode: trunk
   vlans: '102'
+  lacp_fallback_mode: individual
 - name: Port-Channel23
   description: INBAND-MGMT-IP_Po1
   type: switched
