--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/sflow.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/sflow.yml
@@ -32,6 +32,7 @@ sflow:
   source_interface: Management0
   sample: 1000
   sample_input_subinterface: true
+  sample_output_subinterface: true
   dangerous: true
   polling_interval: 10
   extensions:
