--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13574,6 +13574,8 @@ keys:
         - str
       sample_input_subinterface:
         type: bool
+      sample_output_subinterface:
+        type: bool
       dangerous:
         type: bool
       polling_interval:
