added var for registering results for role; var name change from `final_state` to `state` for CC

--- a/ansible_collections/arista/avd/roles/deploy_to_cv/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/deploy_to_cv/tasks/main.yml
@@ -45,3 +45,4 @@
     timeouts:
       workspace_build_timeout: "{{ cv_workspace_build_timeout }}"
     return_details: "{{ cv_register_detailed_results }}"
+  register: deploy_to_cv_results
